# ComputationalLife

./: .gitignore  01_self_reference_quine.py  02_self_model_bound.py  03_von_neumann_replicator.py  04_physical_limits.py  CHANGELOG.md  CLAIMS.md  LICENSE  Makefile  NVG_INTERFACE.md  README.md  README.ru.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
complife/: __init__.py  __main__.py  common.py  induction.py  lethal_mutagenesis.py  physical_limits.py  quantum.py  replication.py  self_model.py  self_reference.py
tests/: test_common.py  test_induction.py  test_lethal_mutagenesis.py  test_physical_limits.py  test_quantum.py  test_replication.py  test_self_model.py  test_self_reference.py  test_smoke.py
